--- a/src/main/resources/templates/authentication/change-password.html
+++ b/src/main/resources/templates/authentication/change-password.html
@@ -4,12 +4,10 @@
 <head>
     <title>Change password</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
     <link rel="stylesheet" th:href="@{/css/password-input-visual-effects.css}" type="text/css"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css"/>
 </head>
 <body class="bg-light">
 <div layout:fragment="content">
@@ -25,14 +23,15 @@
                         <p th:if="${MSG_ERROR}" class="alert alert-danger mb-4" role="alert">[[${MSG_ERROR}]]</p>
 
                         <form th:action="@{/change-password}" method="post" th:object="${userPasswordChangeDTO}">
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                             <input type="hidden" id="token" name="token" th:field="*{token}">
 
                             <div class="mb-3">
                                 <div class="password-container">
                                     <label for="password" class="form-label">New password:</label>
 
-                                    <input type="password" id="password" name="password" class="form-control" th:field="*{password}"
-                                           onchange="checkEntropy()" required/>
+                                    <input type="password" id="password" name="password" class="form-control" th:field="*{password}" required/>
+<!--                                           onchange="checkEntropy()" -->
                                     <div id="password-strength-bar" class="password-strength-bar"></div>
                                 </div>
                                 <div id="result"></div>
@@ -54,5 +53,6 @@
     </div>
     <script th:src="@{/js/password-input-visual-effects.js}" type="text/javascript"></script>
 </div>
+<script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
 </body>
 </html>
