--- a/src/main/resources/templates/authentication/register-qr.html
+++ b/src/main/resources/templates/authentication/register-qr.html
@@ -4,8 +4,10 @@
 <head>
     <title>QR</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css"/>
+    <link rel="stylesheet" th:href="@{/css/register-qr-styles.css}" type="text/css"/>
 </head>
 <body class="bg-light">
 <div layout:fragment="content">
@@ -15,15 +17,16 @@
             Scan this Barcode using Google Authenticator app on your phone
             to use it later in login
         </p>
-        <div class="img-thumbnail" style="max-width: 13rem; max-height: 13rem; padding: 0.5rem">
-            <img alt="QR Code" class="d-block" th:src="'data:image/png;base64,' + ${qrUrl}"
-                style="width: 100%; height: 100%"/>
+        <div class="img-thumbnail qr-box">
+<!--            style="max-width: 13rem; max-height: 13rem; padding: 0.5rem"-->
+            <img alt="QR Code" class="d-block qr-img" th:src="'data:image/png;base64,' + ${qrUrl}" />
         </div>
         <a href="/login" class="btn btn-primary mt-2">Go to login page</a>
     </main>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"-->
+<!--        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"-->
+<!--        crossorigin="anonymous"></script>-->
+<script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
 </body>
 </html>
