--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,11 +9,13 @@
     <!--        <link th:href="@{/css/app.css}" rel="stylesheet" />-->
     <!--        <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.bundle.min.js}" defer></script>-->
     <!--        <script th:src="@{/js/app.js}" defer></script>-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"-->
+<!--            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"-->
+<!--            crossorigin="anonymous"></script>-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css"/>
+    <link rel="stylesheet" th:href="@{/css/layout-style.css}" type="text/css"/>
 </head>
 <body>
 <header class="bg-light">
@@ -29,13 +31,13 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <th:block th:if="${#authorization.expression('isAuthenticated()')}">
+            <th:block th:if="${#authorization != null && #authorization.expression('isAuthenticated()')}">
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <ul class="navbar-nav ms-auto">
 
                         <!--                        <th:block th:if="${#authorization.expression('isAuthenticated()')}">-->
                         <li class="navbar-item me-3">
-                            <div style="margin-top: 0.4rem; display: flex; flex-direction: row;">
+                            <div class="d-flex flex-row custom-margin-top">
                                 <p th:text="'Hello,'" class="me-1">&nbsp;</p> <strong><p
                                     th:text="${#authentication.name}"></p></strong>
                                 <p>!</p>
@@ -43,6 +45,7 @@
                         </li>
                         <li class="navbar-item">
                             <form th:action="@{/logout}" method="post" id="logoutForm">
+                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                                 <button type="submit" class="btn btn-primary">Logout</button>
                             </form>
                         </li>
@@ -64,5 +67,6 @@
         <div layout:fragment="content"></div>
     </div>
 </main>
+<script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
 </body>
 </html>
